--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         map1 = document.getElementById('map');
         map1.style.display = 'none';
         var pubnub = PUBNUB.init({
-          subscribe_key: "sub-c-cb3facb2-f234-11e5-8b0b-0619f8945a4f"
+          subscribe_key: "demo"
         });
         var __eon_cols = ["SoMa","Outer Richmond","Ingleside"]; 
         var __eon_labels = {}; 
